Make all ORM as Lazy. Create custom querries, disable jpa.open-in-view, add url filter to AuthTokenFilter